engr441/while-jvm/tests/valid/IfElse_Valid_4e.while
int f(int x) {
    int y;
    if(x < 0) {
      return -1;
    } else if(x > 0) {
      return 1;
    } else {
      y = x;
    }
    return y;
}


void main() {
    assert 0 == f(0);
    assert 1 == f(10);
    assert 1 == f(11);
    assert 1 == f(1212);
    assert -1 == f(-1212);
}
