engr441/while-jvm/tests/invalid-defassign/DefiniteAssign_Invalid_4.while
int f(int x) {
    int y;
    while(y > 0) {
        x = x + 1;
    }
    return x;
}
